[fix] Fixed the alignment of milestones with weekends (15m)

--- a/app/assets/stylesheets/houston/roadmap/roadmap.scss
+++ b/app/assets/stylesheets/houston/roadmap/roadmap.scss
@@ -170,9 +170,14 @@ to {background-position: 30px 0;}
   border: 1px solid black;
 }
 
+.roadmap-bands {
+  position: relative;
+  padding: 8px 0 52px;
+}
+
 .roadmap-today {
   position: absolute;
-  top: 73px;
+  top: 0;
   bottom: 52px;
   width: 1px;
   background: rgba(0, 0, 0, 0.5);
@@ -180,8 +185,8 @@ to {background-position: 30px 0;}
 }
 
 .roadmap-weekend {
-  background: rgba(255,255,255,0.33);
+  background: rgba(255, 255, 255, 0.4);
   position: absolute;
-  top: 56px;
+  top: 0;
   bottom: 52px;
 }
